--- a/src/SciTech.Rpc/SciTech.Rpc.csproj
+++ b/src/SciTech.Rpc/SciTech.Rpc.csproj
@@ -12,6 +12,15 @@
   <Import Project="..\Platform.props" />
 
   <PropertyGroup>
+    <Description>SciTech.Rpc is a high-performance, code-first, remote procedure call framework, designed to handle remote procedure calls on all levels.
+    From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.&#13;
+    This package contains the core SciTech.Rpc implementation and should normally not be added separately. 
+    Use on of the SciTech.Rpc implementation packages: SciTech.Rpc.Grpc, SciTech.Rpc.NetGrpc, SciTech.Rpc.Pipelines.
+  </Description>
+  </PropertyGroup>
+
+
+  <PropertyGroup>
     <CodeAnalysisRuleSet>..\SciTech.Rpc.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
