Upgrade to "Grpc.AspNetCore.Server" version 0.1.21-pre1 (using NuGet)
Improve NetGrpc service registration (using ASP.NET Core dependency injection)
Improve RPC fault/exception handling.

--- a/src/Platform.props
+++ b/src/Platform.props
@@ -38,7 +38,7 @@
     <DefineConstants>$(DefineConstants);COREFX</DefineConstants>
     <HasPlatformSpans>true</HasPlatformSpans>
     <PlatformSpanOverloads>true</PlatformSpanOverloads>
-    <HasAsyncEnum>true</HasAsyncEnum>
+    <!--<HasAsyncEnum>true</HasAsyncEnum>-->
     <HasTaskExtensions>true</HasTaskExtensions>
     <HasReflectionEmit>true</HasReflectionEmit>
   </PropertyGroup>
