--- a/src/SciTech.Rpc.NetGrpc/SciTech.Rpc.NetGrpc.csproj
+++ b/src/SciTech.Rpc.NetGrpc/SciTech.Rpc.NetGrpc.csproj
@@ -11,7 +11,8 @@
     <Copyright>Copyright 2019. SciTech Software AB</Copyright>
     <Description>
       SciTech.Rpc is a high-performance, code-first, remote procedure call framework, designed to handle remote procedure calls on all levels.
-      From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.
+      From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.
+
       This package contains the communication layer for the fully managed ASP.NET Core implementation of the gRPC library (https://github.com/grpc/grpc-dotnet).
     </Description>
   </PropertyGroup>
@@ -23,7 +24,7 @@
 
   <PropertyGroup>
     <LangVersion>8.0</LangVersion>
-    <NullableContextOptions>enable</NullableContextOptions>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -39,8 +40,8 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <Compile Include="..\SciTech.Rpc.Grpc\Grpc\Internal\GrpcMethodDefinition.cs" Link="Grpc\Internal\GrpcMethodDefinition.cs" />
     <Compile Include="..\SciTech.Rpc.Grpc\Grpc\Server\Internal\GrpcCallContext.cs" Link="Grpc\Server\Internal\GrpcCallContext.cs" />
+    <Compile Include="..\SciTech.Rpc.Grpc\Grpc\Internal\GrpcMethodDefinition.cs" Link="Grpc\Server\Internal\GrpcMethodDefinition.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -61,8 +62,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Grpc\Internal\" />
-    <Folder Include="Grpc\Server\Internal\" />
     <Folder Include="Grpc\Server\Internal\" />
   </ItemGroup>
 
