--- a/src/SciTech.Rpc.Grpc/SciTech.Rpc.Grpc.csproj
+++ b/src/SciTech.Rpc.Grpc/SciTech.Rpc.Grpc.csproj
@@ -16,7 +16,7 @@
   <PropertyGroup>
     <Description>
       SciTech.Rpc is a high-performance, code-first, remote procedure call framework, designed to handle remote procedure calls on all levels.
-      From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.&#13;
+      From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.
       This package contains the communication layer for the native/.NET implementation of the gRPC library (https://github.com/grpc/grpc).
     </Description>
   </PropertyGroup>
@@ -48,6 +48,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Grpc.Core" Version="1.20.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
