--- a/src/SciTech.Rpc.NetGrpc/SciTech.Rpc.NetGrpc.csproj
+++ b/src/SciTech.Rpc.NetGrpc/SciTech.Rpc.NetGrpc.csproj
@@ -9,11 +9,10 @@
 
   <PropertyGroup>
     <Copyright>Copyright 2019. SciTech Software AB</Copyright>
-    <Description>
-      SciTech.Rpc is a high-performance, code-first, remote procedure call framework, designed to handle remote procedure calls on all levels.
-      From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.
+    <Description>SciTech.Rpc is a high-performance, code-first, remote procedure call framework, designed to handle remote procedure calls on all levels.
+From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.
 
-      This package contains the communication layer for the fully managed ASP.NET Core implementation of the gRPC library (https://github.com/grpc/grpc-dotnet).
+This package contains the communication layer for the fully managed ASP.NET Core implementation of the gRPC library (https://github.com/grpc/grpc-dotnet).
     </Description>
   </PropertyGroup>
 
