--- a/src/SciTech.Rpc.Pipelines/SciTech.Rpc.Pipelines.csproj
+++ b/src/SciTech.Rpc.Pipelines/SciTech.Rpc.Pipelines.csproj
@@ -15,7 +15,7 @@
     <Copyright>Copyright 2019. SciTech Software AB</Copyright>
     <Description>
       SciTech.Rpc is a high-performance, code-first, remote procedure call framework, designed to handle remote procedure calls on all levels.
-      From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.&#13;
+      From internet deployed services over HTTP/2 (based on gRPC), to in-process proxy communication.
       This package contains the communication layer for the Pipelines implementation of SciTech.Rpc.
     </Description>
   </PropertyGroup>
@@ -46,6 +46,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.2.0" />
     <PackageReference Include="Pipelines.Sockets.Unofficial" Version="2.0.22" />
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
 
