Use grpc-dotnet v0.1.21-pre1. Bump version to v.0.5.3-alpha1

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "lib/grpc-dotnet"]
 	path = lib/grpc-dotnet
-	url = https://github.com/SciTechSoftware/grpc-dotnet.git
-	branch = scitech-rpc
+	url = https://github.com/grpc/grpc-dotnet.git
+	branch = master
