--- a/examples/Server/GrpcAndLightweightServer/GrpcAndLightweightServer.csproj
+++ b/examples/Server/GrpcAndLightweightServer/GrpcAndLightweightServer.csproj
@@ -6,31 +6,44 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="..\..\..\Certs\TestCertificates.Client.cs" Link="TestCertificates.Client.cs" />
-    <Compile Include="..\..\Common\IMailBoxManager.cs" Link="IMailBoxManager.cs" />
+    <None Remove="@(Protobuf)" />
   </ItemGroup>
 
-  <!--Client common files-->
+  <!--Client/Server common files-->
+  <ItemGroup>
+    <Compile Include="..\..\Common\**\*.cs" LinkBase="Common" />
+  </ItemGroup>
+
+  <!--Server common files-->
   <ItemGroup>
     <Compile Include="..\Common\**\*.cs" LinkBase="" />
   </ItemGroup>
-  
+
   <ItemGroup>
-    <None Include="..\..\..\Certs\ca.crt" Link="ca.crt">
+    <Compile Include="..\..\..\Certs\TestCertificates.Server.cs" Link="TestCertificates.Server.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\Certs\server.crt" Link="server.crt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\..\Certs\client.crt" Link="client.crt">
+    <None Include="..\..\..\Certs\server.key" Link="server.key">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="..\..\..\Certs\client.key" Link="client.key">
+    <None Include="..\..\..\Certs\server.pfx" Link="server.pfx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="System.Threading.Channels" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\src\SciTech.Rpc.Grpc\SciTech.Rpc.Grpc.csproj" />
     <ProjectReference Include="..\..\..\src\SciTech.Rpc.Lightweight\SciTech.Rpc.Lightweight.csproj" />
-    <ProjectReference Include="..\..\..\src\SciTech.Rpc\SciTech.Rpc.csproj" />
   </ItemGroup>
+
 
 </Project>
