--- a/src/SciTech.Rpc.Lightweight/SciTech.Rpc.Lightweight.csproj
+++ b/src/SciTech.Rpc.Lightweight/SciTech.Rpc.Lightweight.csproj
@@ -1,11 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup Condition="'$(EnableMultiTargeting)'=='true'">
+  <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461;netcoreapp2.1</TargetFrameworks>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(EnableMultiTargeting)'!='true'">
-    <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <Import Project="..\Package.props" />
