--- a/src/SciTech.Core/SciTech.Core.csproj
+++ b/src/SciTech.Core/SciTech.Core.csproj
@@ -1,11 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup Condition="'$(EnableMultiTargeting)'=='true'">
-      <TargetFrameworks>netstandard2.0;net461;netcoreapp2.1</TargetFrameworks>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(EnableMultiTargeting)'!='true'">
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.0;net461;netcoreapp2.1</TargetFrameworks>
   </PropertyGroup>
   
   <PropertyGroup>
