--- a/src/SciTech.Core/SciTech.Core.csproj
+++ b/src/SciTech.Core/SciTech.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461;netcoreapp2.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net461;net472;netcoreapp2.1</TargetFrameworks>
   </PropertyGroup>
   
   <PropertyGroup>
@@ -10,7 +10,7 @@
     <Company>SciTech Software AB</Company>
     <Authors>SciTechSoftware</Authors>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <Version>0.6.0-alpha2</Version>
+    <Version>0.6.1-alpha1</Version>
     <Description>Contains utility/helper classes used by the SciTech.Rpc project. This 
 package is currently not intended for other use.</Description>
   </PropertyGroup>
