--- a/src/SciTech.Rpc.NetGrpc.Client/SciTech.Rpc.NetGrpc.Client.csproj
+++ b/src/SciTech.Rpc.NetGrpc.Client/SciTech.Rpc.NetGrpc.Client.csproj
@@ -23,7 +23,7 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.Core.Api" Version="2.23.0-pre1" />
-    <PackageReference Include="Grpc.Net.Client" Version="0.1.22-pre2" />
+    <PackageReference Include="Grpc.Net.Client" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
