Add IAsyncEnumerable support.

--- a/src/Platform.props
+++ b/src/Platform.props
@@ -1,18 +1,12 @@
 ﻿<Project >
 
   <PropertyGroup>
-    <!-- this is how we will configure the builds relatively cleanly -->
-
-    <!--<FeatureXXX>true</FeatureXXX>-->
-    <PlatformMemoryStreamBuffer>true</PlatformMemoryStreamBuffer>
-    <PlatformSpans>true</PlatformSpans>
-    <HasPlatformSpans>false</HasPlatformSpans>
+    <!-- Defaults based on net472 -->
     <HasAsyncEnum>false</HasAsyncEnum>
-    <HasReflectionEmit>false</HasReflectionEmit>
-    <HasTaskExtensions>false</HasTaskExtensions>
-    <PlatformSpanOverloads>false</PlatformSpanOverloads>
-    <HasSystemSslProtocols>true</HasSystemSslProtocols>
     <HasNullableAttributes>false</HasNullableAttributes>
+    <HasPlatformSpanOverloads>false</HasPlatformSpanOverloads>
+    <HasReflectionEmit>true</HasReflectionEmit>
+    <HasSystemSslProtocols>true</HasSystemSslProtocols>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'net461'">
@@ -25,40 +19,29 @@
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
     <DefineConstants>$(DefineConstants);COREFX</DefineConstants>
+    <HasAsyncEnum>true</HasAsyncEnum>
     <HasNullableAttributes>true</HasNullableAttributes>
+    <HasPlatformSpanOverloads>true</HasPlatformSpanOverloads>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0'">
     <DefineConstants>$(DefineConstants);COREFX</DefineConstants>
-    <HasPlatformSpans>true</HasPlatformSpans>
-    <HasAsyncEnum>true</HasAsyncEnum>
-    <HasTaskExtensions>true</HasTaskExtensions>
-    <HasReflectionEmit>true</HasReflectionEmit>
   </PropertyGroup>
   
   <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp2.1'">
     <DefineConstants>$(DefineConstants);COREFX</DefineConstants>
-    <HasPlatformSpans>true</HasPlatformSpans>
-    <PlatformSpanOverloads>true</PlatformSpanOverloads>
     <HasAsyncEnum>true</HasAsyncEnum>
-    <HasTaskExtensions>true</HasTaskExtensions>
-    <HasReflectionEmit>true</HasReflectionEmit>
+    <HasPlatformSpanOverloads>true</HasPlatformSpanOverloads>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
     <DefineConstants>$(DefineConstants);COREFX</DefineConstants>
-    <HasPlatformSpans>true</HasPlatformSpans>
-    <PlatformSpanOverloads>true</PlatformSpanOverloads>
-    <!--<HasAsyncEnum>true</HasAsyncEnum>-->
-    <HasTaskExtensions>true</HasTaskExtensions>
-    <HasReflectionEmit>true</HasReflectionEmit>
+    <HasAsyncEnum>true</HasAsyncEnum>
     <HasNullableAttributes>true</HasNullableAttributes>
+    <HasPlatformSpanOverloads>true</HasPlatformSpanOverloads>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(PlatformSpans)' == 'true'">
-    <DefineConstants>$(DefineConstants);PLAT_SPANS</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(PlatformSpans)' == 'true' and '$(PlatformSpanOverloads)' == 'true'">
+  <PropertyGroup Condition="'$(HasPlatformSpanOverloads)' == 'true'">
     <DefineConstants>$(DefineConstants);PLAT_SPAN_OVERLOADS</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(HasAsyncEnum)' == 'true'">
@@ -66,6 +49,9 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(HasNullableAttributes)' == 'true'">
     <DefineConstants>$(DefineConstants);PLAT_NULLABLE_ATTRIBUTES</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(HasReflectionEmit)' == 'true'">
+    <DefineConstants>$(DefineConstants);PLAT_REFLECTION_EMIT</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(HasSystemSslProtocols)' == 'true'">
     <DefineConstants>$(DefineConstants);PLAT_SYSTEM_SSL_PROTOCOLS</DefineConstants>
