--- a/test/SciTech.Rpc.Tests/SciTech.Rpc.Tests.csproj
+++ b/test/SciTech.Rpc.Tests/SciTech.Rpc.Tests.csproj
@@ -1,9 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <!--<TargetFrameworks>net461;net472;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0</TargetFrameworks>-->
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-
+    <TargetFrameworks>net461;net472;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0</TargetFrameworks>
+    <!--<TargetFramework>netcoreapp3.0</TargetFramework>-->
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
