--- a/src/SciTech.Rpc.NetGrpc.Client/SciTech.Rpc.NetGrpc.Client.csproj
+++ b/src/SciTech.Rpc.NetGrpc.Client/SciTech.Rpc.NetGrpc.Client.csproj
@@ -34,8 +34,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.Core.Api" Version="2.23.0" />
-    <PackageReference Include="Grpc.Net.Client" Version="0.2.23-pre2" />
+    <PackageReference Include="Grpc.Core.Api" Version="2.24.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.23.2" />
   </ItemGroup>
 
   <ItemGroup>
